feat: init users
